<resources>
    <string name="app_name">OnlyFarms</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="map_description">View map</string>
    <string name="offers_near_you">Offers Near You</string>
    <string name="search">Search</string>

    <string name="Welcome_to_only_farms">Welcome to Only Farms</string>
    <string name="I_want_to_buy">I want to buy</string>
    <string name="I_want_to_sell">I want to sell</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="No_account">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>

    <string name="store_name">Store name</string>
    <string name="address">Address</string>
    <string name="address2">Address:</string>
    <string name="Opening_hours">Opening hours</string>
    <string name="Rating">Rating:</string>
    <string name="Tags">Tags: </string>

    <string name="product_name">Product name</string>
    <string name="Price">Price:</string>
    <string name="Quantity">Quantity:</string>

    <string name="open_closed">open/closed</string>
    <string name="quantity_reserved">Quantity reserved:</string>

    <string name="my_account">My Account</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Reservations">Reservations</string>
    <string name="Reservations_pending">Pending Reservations</string>
    <string name="clientName">Client name:</string>
    <string name="orderedItems">Items ordered:</string>
    <string name="MakeReservation">Go To Cart</string>
    <string name="seeMore">See more...</string>

    <string name="productName">Product name</string>
    <string name="addProduct">Add product</string>

    <string name="reserve">Reserve</string>
    <string name="cancel">Cancel</string>

    <string name="description_placeholder">This is where a description should go...</string>
    <string name="description">Description</string>
    <string name="open">Open:</string>
    <string name="opening_hours_placeholder">This is where the detailed/fromatted opening hours should go...</string>

    <string name="editStore">Edit store</string>
    <string name="editProduct">Edit product</string>

    <string-array name="hours">
        <item>6:00</item>
        <item>6:30</item>
        <item>7:00</item>
        <item>7:30</item>
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
    </string-array>

    <string name="settings">Settings</string>
    <string name="gps">GPS</string>
    <string name="gps_description">GPS is used to determine store distance</string>

    <string name="your_stores">Your Stores</string>
    <string name="addStore">Add store</string>
    <string name="item_name">Item Name</string>
    <string name="clear">Clear</string>

    <string name="per_unit">Per Unit</string>
    <string name="price">Price</string>
    <string name="distance">Distance</string>
    <string name="loading_stores">Loading Stores…</string>
    <string name="location">Make sure your location is enabled</string>

</resources>