<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".view.RegisterView">

        <Button
            android:id="@+id/register_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/create_account"
            app:layout_constraintTop_toBottomOf="@id/register_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/Welcome_to_only_farms"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_GIVEN"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_accountType" />

        <EditText
            android:id="@+id/register_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_FAMILY"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@id/register_firstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@id/register_lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@id/register_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/register_spinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="77dp"
            android:layout_height="70dp"
            android:visibility="invisible"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/register_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RadioGroup
            android:id="@+id/register_accountType"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:checkedButton="@id/register_accountType_client"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/register_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/register_accountType_client"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/I_want_to_buy" />

            <RadioButton
                android:id="@+id/register_accountType_vendor"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/I_want_to_sell" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>